added ability to install packages via git

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,3 +14,4 @@ html
     <script src="javascripts/index.js"></script>
   body
     block content
+    <script src="javascripts/packages.js"></script>
