--- a/views/packages.pug
+++ b/views/packages.pug
@@ -3,3 +3,7 @@ extends layout
 block content
     input(type:'text')#packageRepoInput
     button#installPackage Install
+    br
+    br
+    table#packagesTable
+    <script src="javascripts/packages.js"></script>
