added link to go to packages

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,3 +4,6 @@ block content
   .mdl-grid
     .mdl-cell.mdl-cell--12-col(style="text-align: center")
       h1 AssistIO
+      br
+      br
+      a(href="/packages") Packages
