--- a/views/packages.pug
+++ b/views/packages.pug
@@ -6,4 +6,7 @@ block content
     br
     br
     table#packagesTable
+    br
+    br
+    a(href="/") Home
     <script src="javascripts/packages.js"></script>
