--- a/main_server/views/index.pug
+++ b/main_server/views/index.pug
@@ -3,7 +3,10 @@ extends layout
 block content
   .mdl-grid
     .mdl-cell.mdl-cell--12-col(style="text-align: center")
-      h1 AssistIO
+      h1 Lab Assistant IO
       br
-      br
-      a(href="/packages") Packages
+      div(id="botui-app" class="botui-app-container") 
+        <bot-ui></bot-ui>
+      #configure-box
+        a(href="/packages") Packages
+
