--- a/main_server/views/layout.pug
+++ b/main_server/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title AssistIO
+    title Lab-Assistant-IO
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
@@ -12,5 +12,12 @@ html
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="javascripts/index.js"></script>
+    
+    // Bot UI  
+    <link rel="stylesheet" href="https://unpkg.com/botui/build/botui.min.css" />
+    link(rel='stylesheet', href='stylesheets/botui-theme-modified.css', type='text/css')
+    <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
+    <script src="https://unpkg.com/botui/build/botui.min.js"></script>
+
   body
     block content
