--- a/main_server/views/documentation.pug
+++ b/main_server/views/documentation.pug
@@ -6,5 +6,5 @@ block content
         .mdl-grid
           .mdl-cell.mdl-cell--12-col(style="text-align: center")
             .mdl-card
-              .mdl-card__title Settings
-              .mdl-card__supporting-text The settings will be set here.
+              .mdl-card__title Documentation
+              .mdl-card__supporting-text The documentation will be shown here.
