--- a/main_server/views/devices.pug
+++ b/main_server/views/devices.pug
@@ -6,5 +6,5 @@ block content
         .mdl-grid
           .mdl-cell.mdl-cell--12-col(style="text-align: center")
             .mdl-card
-              .mdl-card__title Settings
-              .mdl-card__supporting-text The settings will be set here.
+              .mdl-card__title Devices
+              .mdl-card__supporting-text The devices will be added here.
