--- a/main_server/views/layout.pug
+++ b/main_server/views/layout.pug
@@ -1,23 +1,44 @@
 doctype html
 html
   head
+    // Metadata
     title Lab-Assistant-IO
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/speechkitt.min.js"></script>
-    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="javascripts/index.js"></script>
+    link(rel='manifest', href='/manifest.json')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     
-    // Bot UI  
-    <link rel="stylesheet" href="https://unpkg.com/botui/build/botui.min.css" />
-    link(rel='stylesheet', href='stylesheets/botui-theme-modified.css', type='text/css')
-    <script src="https://cdn.jsdelivr.net/vue/latest/vue.min.js"></script>
-    <script src="https://unpkg.com/botui/build/botui.min.js"></script>
+    // General Styling
+    link(rel='stylesheet', href='stylesheets/dark-theme.css')
+    //link(rel='stylesheet', href='stylesheets/light-theme.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+    link(rel='stylesheet', href='https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css')
+    
+    // General Scripts
+    script(defer='', src='https://code.getmdl.io/1.3.0/material.min.js')
+    script(src='https://code.jquery.com/jquery-3.2.1.min.js', integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', crossorigin='anonymous')
+    script(src='javascripts/index.js')
+
+    // Voice Recognition Scripts
+    script(src='//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/speechkitt.min.js')
+    script(src='https://code.responsivevoice.org/responsivevoice.js')
+    
+    // Bot UI Styling and Scripts 
+    link(rel='stylesheet', href='stylesheets/botui.min.css', type='text/css')
+    script(src='https://cdn.jsdelivr.net/vue/latest/vue.min.js')
+    script(src='https://unpkg.com/botui/build/botui.min.js')
 
   body
-    block content
+    .mdl-layout.mdl-js-layout
+      header.mdl-layout__header.mdl-layout__header--scroll
+        .mdl-layout__header-row
+          span.mdl-layout-title Lab Assistant IO
+      .mdl-layout__drawer
+        span.mdl-layout-title Lab Assistant IO
+        nav.mdl-navigation
+          a.mdl-navigation__link(href='/') Home
+          a.mdl-navigation__link(href='packages') Packages
+          a.mdl-navigation__link(href='settings') Settings
+          a.mdl-navigation__link(href='devices') Devices
+          a.mdl-navigation__link(href='documentation') Documentation
+      block content
+
