--- a/main_server/views/layout.pug
+++ b/main_server/views/layout.pug
@@ -7,9 +7,11 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     
     // General Styling
+    link(rel='stylesheet', href='stylesheets/style.css')
     link(rel='stylesheet', href='stylesheets/dark-theme.css')
     //link(rel='stylesheet', href='stylesheets/light-theme.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700', type='text/css')
     link(rel='stylesheet', href='https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css')
     
     // General Scripts
@@ -29,7 +31,7 @@ html
 
   body
     .mdl-layout.mdl-js-layout
-      header.mdl-layout__header.mdl-layout__header--scroll
+      header.mdl-layout__header.mdl-layout--fixed-header
         .mdl-layout__header-row
           span.mdl-layout-title Lab Assistant IO
       .mdl-layout__drawer
