--- a/main_server/views/settings.pug
+++ b/main_server/views/settings.pug
@@ -3,8 +3,7 @@ extends layout
 block content
     main.mdl-layout__content
       .page-content
-        .mdl-grid
-          .mdl-cell.mdl-cell--12-col(style="text-align: center")
-            .mdl-card
-              .mdl-card__title Settings
+        .mdl-card.center-card
+          .mdl-card__title Settings
+          .mdl-card__supporting-text 
               .mdl-card__supporting-text The settings will be set here.
