--- a/main_server/public/stylesheets/speechkitt.css
+++ b/main_server/public/stylesheets/speechkitt.css
@@ -15,7 +15,7 @@
     left: 20px;
     outline: none;
     border: none;
-    /* box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px; */
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px;
     cursor: default;
     font-family: Lato, Helvetica, Arial, sans-serif;
     font-size: 16px;
