--- a/main_server/views/devices.pug
+++ b/main_server/views/devices.pug
@@ -3,8 +3,6 @@ extends layout
 block content
     main.mdl-layout__content
       .page-content
-        .mdl-grid
-          .mdl-cell.mdl-cell--12-col(style="text-align: center")
-            .mdl-card
-              .mdl-card__title Devices
-              .mdl-card__supporting-text The devices will be added here.
+        .mdl-card.center-card
+          .mdl-card__title Devices
+          .mdl-card__supporting-text The devices will be added here.
