--- a/main_server/public/stylesheets/style.css
+++ b/main_server/public/stylesheets/style.css
@@ -3,3 +3,8 @@
   margin: 0 auto;
   margin-top: 50px;
 }
+body{
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  user-select: none;
+}
