--- a/main_server/views/layout.pug
+++ b/main_server/views/layout.pug
@@ -11,7 +11,7 @@ html
     link(rel='stylesheet', href='stylesheets/dark-theme.css')
     //link(rel='stylesheet', href='stylesheets/light-theme.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
-    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700', type='text/css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700', type='text/css')
     link(rel='stylesheet', href='https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css')
     
     // General Scripts
